# internal/router.go
@@ -2,6 +2,7 @@ package internal
 
 import (
 	"be-park-ease/internal/handler"
+	"be-park-ease/internal/sql"
 	"be-park-ease/middleware"
 
 	"github.com/gofiber/fiber/v2"
@@ -11,6 +12,7 @@ type Router interface {
 	BaseRoute(handler handler.BaseHandler)
 	AuthRoute(handler handler.AuthHandler)
 	HistoryRoute(handler handler.HistoryHandler)
+	UserRoute(handler handler.UserHandler)
 }
 
 type router struct {
@@ -39,4 +41,9 @@ func (r *router) HistoryRoute(handler handler.HistoryHandler) {
 	history := r.app.Group("history")
 	entry := history.Group("entry")
 	entry.Get("", r.mid.Auth(false), handler.AllHistory)
+}
+
+func (r *router) UserRoute(handler handler.UserHandler) {
+	user := r.app.Group("user")
+	user.Get("", r.mid.Auth(false), r.mid.Role(sql.UserRoleAdmin, false), handler.AllUser)
 }
